# Online-Examination-System

./: .gitignore  CMakeLists.txt  LICENSE copy  PROJECT_OVERVIEW.md  README .md  README.md  build.ps1  clean.ps1  run.ps1  test.ps1
build copy/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build copy/exam_system_autogen/: deps  mocs_compilation.cpp
build copy/exam_system_autogen/WTNFTCRKFR/: moc_LoginWindow.cpp  moc_LoginWindow.cpp.d  moc_StudentWindow.cpp  moc_StudentWindow.cpp.d  moc_TeacherWindow.cpp  moc_TeacherWindow.cpp.d
docs/: .gitkeep  Memeber.md  README.md  WORKFLOW_FLOWCHART.md
sql/: sample_data.sql  schema.sql
sql copy/: sample_data.sql  schema.sql
src/: main.cpp
src/authentication/: simple_auth.cpp  simple_auth.h  user.cpp  user.h
src/components/: hash_table.h  linked_list.h  queue.h  sorting.h  stack.h
src/database/: database.cpp  database.h  exam_types.cpp  exam_types.h
src/features/: admin.h  admin_stub.h  exam.h  exam_creator.h  exam_stub.h  exam_template.h  student.h  student_stub.h
src/gui/: main_gui.cpp
src/gui/windows/: LoginWindow.cpp  LoginWindow.h  StudentWindow.cpp  StudentWindow.h  TeacherWindow.cpp  TeacherWindow.h
src/structure/: utils.cpp  utils.h
